# beaker

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE-Apache  MIGRATION.md  README.md  beaker.code-workspace
.github/workflows/: doctest.yml  lint.yml  test.yml
cli/: Cargo.toml
cli/docs/: beaker_wasm.md  beaker_wasm_proposal.md  beaker_wasm_proposal_query.md
cli/src/: lib.rs  main.rs
cli/src/cw/: config.rs  mod.rs
cli/src/framework/: config.rs  context.rs  macros.rs  mod.rs  module.rs
cli/src/modules/: mod.rs
cli/src/modules/cw/: entrypoint.rs  mod.rs  ops.rs
cli/src/modules/wasm/: args.rs  config.rs  entrypoint.rs  mod.rs  ops.rs  response.rs
cli/src/modules/wasm/ops/: build.rs  deploy.rs  instantiate.rs  new.rs  store_code.rs
cli/src/modules/wasm/proposal/: entrypoint.rs  mod.rs  ops.rs  reponse.rs
cli/src/modules/wasm/proposal/ops/: mod.rs  propose.rs  query.rs  vote.rs
cli/src/modules/workspace/: config.rs  entrypoint.rs  ops.rs
cli/src/support/: coin.rs  cosmos.rs  gas.rs  mod.rs  ops_response.rs  proto.rs  signer.rs  state.rs  template.rs  wasm.rs
cli/src/utils/: cosmos.rs  mod.rs  state.rs
cli/src/workspace/: ops.rs
core/: Cargo.toml
core/src/: lib.rs
cw/: Cargo.toml
cw/src/: lib.rs
derive_get_docs/: Cargo.toml
derive_get_docs/examples/: simple.rs
derive_get_docs/src/: lib.rs
derive_get_docs/tests/: simple.rs
docs/: beaker.md  beaker_wasm_proposal_query.md
docs/commands/: README.md  beaker_key.md  beaker_task.md  beaker_wasm.md  beaker_wasm_proposal.md
docs/config/: README.md  console.md  global.md  wasm.md  workspace.md
examples/scripting-cookbook/: Beaker.toml
examples/scripting-cookbook/contracts/calculator/: Cargo.toml  README.md
examples/scripting-cookbook/contracts/calculator/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
examples/scripting-cookbook/contracts/op-add/: Cargo.toml  README.md
examples/scripting-cookbook/contracts/op-add/src/: contract.rs  msg.rs
examples/scripting-cookbook/contracts/op-mul/: Cargo.toml
examples/scripting-cookbook/contracts/op-mul/src/: contract.rs  state.rs
examples/scripting-cookbook/tasks/: deploy.rhai  register_ops.rhai
examples/scripting-cookbook/tasks/lib/: shared_args.rhai
examples/scripting-cookbook/ts/sdk/: README.md  package.json  typedoc.json
get_docs/: Cargo.toml
get_docs/src/: lib.rs
helpers/template/: Cargo.toml
helpers/template/src/: lib.rs
modules/cw/: Cargo.toml
modules/cw/src/: lib.rs
modules/project/: Cargo.toml
modules/project/src/: lib.rs
modules/workspace/: Cargo.toml
modules/workspace/src/: lib.rs
templates/project/: .gitignore  Cargo.toml  Protostar.toml  cargo-generate.toml  pre-script.rhai
templates/project/.beaker/: index.js  package.json
templates/project/contracts/counter/: Cargo.toml
templates/project/contracts/counter/src/: interface.rs  lib.rs  msg.rs
templates/project/frontend/: .beaker  .env.local.example  package.json
templates/project/frontend/lib/: state.ts
templates/project/ts/sdk/: README.md  package.json  typedoc.json
tests/cli/: Cargo.toml
tests/cli/src/: main.rs
tests/cli/src/workspace/: config.rs  mod.rs
ts/beaker/: README.md  beaker-0.0.1.tgz  package-lock.json  package.json  rollup.config.js  tsconfig.json  typedoc.json
ts/beaker-console/: .prettierignore  package-lock.json  package.json  prettier.config.js  tsconfig.json
ts/beaker-console/docs/: README.md
ts/beaker-console/docs/classes/: Account.md  Contract.md
ts/beaker-console/src/: account.ts  console.js  contract.ts  index.ts  utils.ts
ts/beaker-console/types/: account.d.ts  account.d.ts.map  client.d.ts  contract.d.ts  contract.d.ts.map  index.d.ts  index.d.ts.map  utils.d.ts  utils.d.ts.map
ts/beaker/docs/: README.md
ts/beaker/src/: account.ts  console.js  contract.ts  index.test.ts  utils.ts
ts/beaker/types/: account.d.ts  account.d.ts.map  client.d.ts.map  contract.d.ts  contract.d.ts.map  index.d.ts  index.d.ts.map  utils.d.ts  utils.d.ts.map
