[package]
edition = "2021"
name = "protostar-core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = {version = "3.1.15", features = ["derive"]}
config = "0.13.1"
derive-new = "0.5.9"
getset = "0.1.2"
serde = "1.0.137"
