[package]
edition = "2021"
name = "derive_get_docs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
get_docs = {path = "../get_docs"}
proc-macro2 = "1.0.40"
quote = "1.0.20"
syn = {version = "1.0.98", features = ["full", "extra-traits"]}
