[package]
edition = "2021"
name = "protostar-helper-template"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
cargo-generate = {version = "0.13.1", features = ["vendored-openssl"]}
structopt = "0.3.26"
