[package]
edition = "2021"
name = "protostar-cw"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
assert_fs = "1.0.7"
cargo-generate = {version = "0.13.1", features = ["vendored-openssl"]}
cargo_toml = "0.11.5"
clap = {version = "3.1.15", features = ["derive"]}
config = "0.13.1"
predicates = "2.1.1"
protostar-helper-template = {path = "../../helpers/template"}
serial_test = "0.6.0"
structopt = "0.3.26"
