[package]
edition = "2021"
name = "protostar-cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = {version = "3.1.15", features = ["derive"]}
config = "0.13.1"
protostar-core = {path = "../../core"}
protostar-cw = {path = "../../modules/cw"}
protostar-workspace = {path = "../../modules/workspace"}
serde = "1.0.137"

[dev_dependencies]
assert_fs = "1.0.7"
predicates = "2.1.1"
serial_test = "0.6.0"
